--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -19,18 +19,18 @@
                 <div fxLayout="column">
                   <div fxLayout="row" fxLayoutAlign="start baseline">
                     <div class="pr-16 secondary-text">
-                      SAT
+                      BTC
                     </div>
                     <div [ngClass.gt-md]="'font-size-24'" class="font-size-16 font-weight-300 mt-8">
-                      {{ convertBalanceInSatoshi('1733500000000').toFixed(3) }}
+                      {{ convertBalanceInBtc(account.balanceNQT).toFixed(8) }}
                     </div>
                   </div>
                   <div fxLayout="row" fxLayoutAlign="start baseline">
                     <div class="pr-16 secondary-text">
-                      USX
+                      USD
                     </div>
                     <div [ngClass.gt-md]="'font-size-24'" class="font-size-16 font-weight-300 mt-8">
-                      {{ convertBalanceInUsCent('1733500000000').toFixed(3) }}
+                      {{ convertBalanceInUsDollar(account.balanceNQT).toFixed(2) }}
                     </div>
                   </div>
                 </div>
