feat(block): add block details view, fix build paths

--- a/web/angular-wallet/src/app/main/blocks/blocks.component.html
+++ b/web/angular-wallet/src/app/main/blocks/blocks.component.html
@@ -20,7 +20,7 @@
           <ng-container matColumnDef="block">
               <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'block' | i18n }}</mat-header-cell>
               <mat-cell *matCellDef="let block">
-                  <span class="link" [routerLink]="['/block', block.block]">{{ block.block }}</span>
+                  <a [routerLink]="['block', block.block]">{{ block.block }}</a>
               </mat-cell>
           </ng-container>
 
