feat(account-details): add account details view

--- a/web/angular-wallet/src/app/main/transactions/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -5,7 +5,7 @@
     <span>{{decryptedMessage}}</span>
   </span>
   <span *ngSwitchCase="'BurstAddress'">
-    <a [routerLink]="['/accounts', value]">{{value}}</a>
+    <a [routerLink]="['/account', convertAddressToNumericId(value)]">{{value}}</a>
   </span>
   <span *ngSwitchDefault>{{value | i18n}}</span>
 </div>
