created cmc widget stub and made marketservice ticker called only once (singleton like)

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
             <div class="p-16" fxLayout="row wrap" fxLayoutAlign="start end">
               <div class="pr-16">
                 <div class="h3 secondary-text">{{ 'recent_blocks' | i18n }}</div>
-                Table goes here
+                <app-market-overview></app-market-overview>
               </div>
             </div>
           </div>
