--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -29,7 +29,7 @@
                     class="user-button">
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <span class="username mr-12" fxHide fxShow.gt-sm>{{selectedAccount.name || selectedAccount.accountRS}}</span>
-                    <mat-icon class="s-16" fxHide.xs>keyboard_arrow_down</mat-icon>
+                    <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
                 </div>
             </button>
 
