--- a/web/angular-wallet/src/app/main/blocks/blocks.component.html
+++ b/web/angular-wallet/src/app/main/blocks/blocks.component.html
@@ -15,7 +15,7 @@
   </div>
   <!-- / HEADER -->
 
-  <div class="p-24">
+  <div class="p-24 content">
       <mat-table #table [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="block">
               <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'block' | i18n }}</mat-header-cell>
