--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -10,8 +10,8 @@
       <h1 class="login__title">Get your free Burst account now.</h1>
       <p class="login__info">Are you a new user? Create a new account and became a new Burst member.</p>
       <div class="login__actions">
-        <a class="login__link--success" [routerLink]="[ '/login/active' ]" [queryParams]="{ newUser: true }">Yes, I'm a new user</a>
-        <a class="login__link--error" [routerLink]="[ '/login/active' ]" >No, I have an account</a>
+        <a class="login__link--yes" [routerLink]="[ '/login/active' ]" [queryParams]="{ newUser: true }">Yes, I'm a new user</a>
+        <a class="login__link--no" [routerLink]="[ '/login/active' ]" >No, I have an account</a>
         <p class="login__divider">or</p>
         <a class="login__link--default" [routerLink]="[ '/login/passive' ]" >Create a new account without passphrase</a>
       </div>
