--- a/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
@@ -4,7 +4,7 @@
 <div class="pin-container">
     <mat-form-field class="example-full-width">
         <input matInput type="password" placeholder="Pin" [(ngModel)]="pin">
-        <mat-hint>Campo obrigatório</mat-hint>
+        <mat-hint>Required</mat-hint>
     </mat-form-field>
 </div>
 <small>
