fix(set-account-info): make it mobile friendly

--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -13,7 +13,7 @@
       </div>
   </div>
 
-  <div class="p-24 w-600">
+  <div class="p-24 content">
 
     <form (ngSubmit)="onSubmit($event);" #setAccountInfoForm="ngForm">
       <mat-form-field appearance="outline">
