--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -5,8 +5,8 @@
     <div class="mr-lg-32" fxFlex="100" *ngIf="account">
 
       <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
-
         <div class="widget" fxFlex="100" fxFlex.gt-sm="40" fxFlex.gt-md="50">
+        <!-- TODO: to extract as own component -->
           <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
             <div class="p-16" fxLayout="row wrap" fxFlexAlign="center">
               <div class="pr-16" fxFlex="60">
@@ -45,7 +45,7 @@
               <div class="pr-16">
                 <div class="h3 secondary-text">{{ 'assets_owned' | i18n }}</div>
                 <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
-                  120
+                  <app-balance-diagram></app-balance-diagram>
                 </div>
               </div>
             </div>
