--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
@@ -1,3 +1,3 @@
-<p>
-  balance-diagram works!
-</p>
+<div>
+  <ngx-charts-area-chart [results]="data" [view]="view" (select)="onSelect($event)"></ngx-charts-area-chart>
+</div>
