some dumb layout tweaks... need to be better

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -43,7 +43,7 @@
           <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
             <div class="p-16" fxLayout="row wrap" fxLayoutAlign="start end">
               <div class="pr-16">
-                <div class="h3 secondary-text">{{ 'assets_owned' | i18n }}</div>
+                <div class="h3 secondary-text">{{ 'balance_history' | i18n }}</div>
                 <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
                   <app-balance-diagram></app-balance-diagram>
                 </div>
