--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
@@ -1,3 +1,3 @@
-<div>
-  <ngx-charts-area-chart [results]="data" [view]="view" (select)="onSelect($event)"></ngx-charts-area-chart>
+<div id="balance-diagram-charts-wrapper">
+  <ngx-charts-area-chart [results]="data" [yAxis]="showYAxis" (select)="onSelect($event)"></ngx-charts-area-chart>
 </div>
