--- a/web/angular-wallet/src/app/app.component.html
+++ b/web/angular-wallet/src/app/app.component.html
@@ -1,8 +1,4 @@
-<ng-container *ngIf="!selectedAccount">
-  <router-outlet></router-outlet>
-</ng-container>
-
-<ng-container *ngIf="selectedAccount">
+<ng-container>
   <main [selectedAccount]="selectedAccount"
         [accounts]="accounts"></main>
 </ng-container>
