--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
@@ -52,8 +52,7 @@
 
       <div *ngIf="advanced">
         <mat-form-field appearance="outline">
-          <input matInput [(ngModel)]="deadline" value="24" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}"
-            disabled>
+          <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
         </mat-form-field>
 
         <mat-form-field appearance="outline">
@@ -76,7 +75,7 @@
     </form>
 
     <strong>Total:</strong> {{ getTotal() }} BURST - 
-    <em (click)="advanced=!advanced">{{ advanced ? "basic" : "advanced" | i18n }}</em>
+    <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
     <br /><br />
 
     <button type="submit" class="mr-8" mat-raised-button mat-button color="primary" (click)="onSubmit($event)">{{ "send_burst" | i18n }}</button>
