fix(add-alias): fix typo

--- a/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
+++ b/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
@@ -17,7 +17,7 @@
   
     <div class="p-24 content">
   
-      <form (ngSubmit)="onSubmit($event);" #setAccountInfoForm="ngForm">
+      <form (ngSubmit)="onSubmit($event);" #setAliasForm="ngForm">
 
         <mat-form-field appearance="outline">
           <mat-select required [(value)]="type">
