--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
@@ -1,8 +1,11 @@
-<div #chart id="balance-diagram-charts-wrapper" (resize)="onResize($event)" >
+<div id="balance-diagram-charts-wrapper" >
   <ngx-charts-area-chart [results]="data"
                          [yAxis]="showYAxis"
                          [yAxisLabel]="yAxisLabel"
                          [showYAxisLabel]="showYAxisLabel"
-                         (select)="onSelect($event)">
+                          [scheme] = "colorScheme"
+                         [curve]="curve"
+                         (select)="onSelect($event)"
+  >
   </ngx-charts-area-chart>
 </div>
