fix(login): improve passive login styles, add favicon

--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
@@ -4,6 +4,7 @@ $media-querie-desktop: 992px;
 $media-querie-screen:  1200px;
 
 .signup {
+  margin: 40px auto;
   &__header {
     background: darken(#f9f9f9, 3%);
     padding: 1rem;
