--- a/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
@@ -1,17 +1,9 @@
 <div class="address-container">
-    <mat-form-field>
-        <input
-          matInput
-          prefix="BURST-"
-          burstInputValidator
-          [patterns]="burstAddressPattern"
-          mask="____-____-____-_____"
-          [dropSpecialCharacters]="false"
-          [showMaskTyped]="true"
-          [(ngModel)]="address"
-          name="address"
-          placeholder="{{ 'address' | i18n }}"
-        >
-        <mat-hint>Type your new burst address</mat-hint>
-    </mat-form-field> <i class="fa fa-lg fa-fw fa-arrow-right" (click)="submit(this.address)"></i>
+  <mat-form-field appearance="outline">
+    <input matInput prefix="BURST-" burstInputValidator [patterns]="burstAddressPattern" mask="____-____-____-_____"
+      [dropSpecialCharacters]="false" [showMaskTyped]="true" [(ngModel)]="address" name="address"
+      placeholder="{{ 'address' | i18n }}">
+  </mat-form-field>
+  <button class="btn-error" mat-raised-button routerLink="/login">{{ 'cancel' | i18n }}</button>
+  <button class="btn-success" mat-raised-button (click)="submit(this.address)">{{ 'submit' | i18n }}</button>
 </div>
