--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -45,7 +45,10 @@
               <div style="width: 100%">
                 <div class="h3 secondary-text">{{ 'balance_history' | i18n }}</div>
                 <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
-                  <app-balance-diagram></app-balance-diagram>
+                  <app-balance-diagram
+                    [account]="account"
+                    [transactionCountLimit]="50"
+                  ></app-balance-diagram>
                 </div>
               </div>
             </div>
