correct receiver/sender multi out handling

--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -2,11 +2,11 @@
   <ng-container matColumnDef="transaction_id">
     <mat-header-cell *matHeaderCellDef mat-sort-header>{{
       "transaction_id" | i18n
-    }}</mat-header-cell>
+      }}</mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       <a
         [routerLink]="['/transactions/transaction', transaction.transaction]"
-        >{{ transaction.transaction }}</a
+      >{{ transaction.transaction }}</a
       >
     </mat-cell>
   </ng-container>
@@ -48,16 +48,7 @@
       <mat-icon>local_atm</mat-icon>&nbsp;{{ "amount" | i18n }}
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
-      <ng-container  *ngIf="!isOwnAccount(transaction.senderRS)">
-      {{
-        convertNQTStringToNumber(transaction.amountNQT) | number: "1.0-8"
-      }}
-      </ng-container>
-      <ng-container  *ngIf="isOwnAccount(transaction.senderRS)">
-      {{
-        -convertNQTStringToNumber(transaction.amountNQT) | number: "1.0-8"
-      }}
-      </ng-container>
+      {{getAmount(transaction) | number: "1.0-8" }}
     </mat-cell>
   </ng-container>
 
@@ -67,7 +58,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       {{
-        convertNQTStringToNumber(transaction.feeNQT) | number: "1.0-8"
+      convertNQTStringToNumber(transaction.feeNQT) | number: "1.0-8"
       }}
     </mat-cell>
   </ng-container>
@@ -77,23 +68,28 @@
       <mat-icon>account_box</mat-icon>&nbsp;{{ "account" | i18n }}
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
-      <a [routerLink]="['/account', transaction.recipient]" *ngIf="isOwnAccount(transaction.senderRS)">{{
-        transaction.recipientRS
-      }}</a>
+      <ng-container *ngIf="isOwnAccount(transaction.senderRS)">
+        <a [routerLink]="['/account', transaction.recipient]" *ngIf="!isMultiOutPayment(transaction)">{{
+          transaction.recipientRS
+          }}</a>
+        <div *ngIf="isMultiOutPayment(transaction)">
+          Multiple Recipients
+        </div>
+      </ng-container>
       <a [routerLink]="['/account', transaction.sender]" *ngIf="!isOwnAccount(transaction.senderRS)">{{
         transaction.senderRS
-      }}</a>
+        }}</a>
     </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="confirmations">
     <mat-header-cell *matHeaderCellDef mat-sort-header>{{
       "confirmations" | i18n
-    }}</mat-header-cell>
+      }}</mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       <span *ngIf="transaction.confirmations">{{
         transaction.confirmations
-      }}</span>
+        }}</span>
     </mat-cell>
   </ng-container>
 
